--- a/mucollib/public/bootstrap/css/mucollib.css
+++ b/mucollib/public/bootstrap/css/mucollib.css
@@ -5,3 +5,13 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+.form-artist {
+	max-width: 330px;
+  	padding: 15px;
+  	margin: 0 auto;
+}
+.form-album {
+	max-width: 700px;
+  	padding: 15px;
+  	margin: 0 auto;
+}
